# buffet

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
docs/: app.js  dashboard.html  download.html  faq.html  glossary.html  index.html  mandate_viewer.js  mandates.html  mandates.js  styles.css  visualizations.html
docs/data/: authority_sources.json  glossary.json  index.json
docs/js/: core.js  dashboard.js  data.js  download.js  glossary.js  governance.js  page.js  viewer.js  visualizations.js  wizard.js
docs/mandates/: index.json
docs/schemas/: mandateos-viewer-ui.schema.json
documentation/: ARCHITECTURE.md  FOUNDER_DEMO.md  JUDGMENT_AUTHORITY.md  JUDGMENT_RECORD_SCHEMA.md  PROCEDURE_CONTRACT.md  README.md
documentation/figures/: process_prompt.md
examples/: README.md
governance/: automation_boundaries.md  conflict_resolution_policy.yaml  escalation_policy.md  override_log.md
judgment_loops/: README.md
scripts/: __init__.py  demo.sh  print_latest_records.py  publish_pages_data.py
skills/: README.md  SKILLS.md  authority_matrix.yaml
tests/: conftest.py  test_allowed_outcomes.py  test_append_only_records.py  test_cli_run_example.py  test_cli_run_skill.py  test_document_hierarchy_reference.py  test_escalation_writes_artifact.py  test_eval_expected_outcomes.py  test_eval_failure_path.py  test_examples_not_imported.py  test_judgment_record_behavior_fields.py  test_judgment_record_validation_errors.py  test_no_examples_imports.py  test_outputs_are_in_processed.py  test_publish_pages_data.py  test_thresholds_do_not_duplicate_mandate.py
(+200 files in other folders)
